<resources>
    <string name="app_name">Lectro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Fragments strings -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="select_snackbar">Please, select one item.</string>
    <string name="selected">Selected</string>

    <!-- Main Activity strings -->
    <string name="timetable">TimeTable</string>
    <string name="seven_days_of_the_week">7 Days of the Week</string>
    <string name="subject">Subject</string>
    <string name="field_error">field can not be empty!</string>
    <string name="time_error">Time field can not be empty!</string>
    <string name="week">Week</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="school_website">College website</string>
    <string name="school_website_snackbar">Please, set URL of your College website in settings.</string>

    <string name="add_subject">Add subject</string>
    <string name="edit_subject">Edit subject</string>
    <string name="teacher">Teacher</string>
    <string name="room">Room</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="time_to_dialog">To:</string>
    <string name="time_from_dialog">From:</string>
    <string name="subject_dialog">Subject:</string>
    <string name="teacher_dialog">Teacher:</string>
    <string name="room_dialog">Room:</string>
    <string name="select_time">Select time</string>
    <string name="select_color">Select color</string>
    <string name="choose_time">Choose time</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_color">Choose color</string>

    <!-- Assignments Activity strings -->
    <string name="title_activity_homeworks">AssignmentsActivity</string>
    <string name="homeworks">Assignments</string>
    <string name="select_date">Select deadline</string>
    <string name="select_exam_date">Select date</string>
    <string name="deadline_dialog">Deadline:</string>
    <string name="deadline">Deadline</string>
    <string name="description_dialog">Description:</string>
    <string name="desctiption">Description</string>
    <string name="date_error">Date field can not be empty!</string>
    <string name="edit_homework">Edit assignment</string>
    <string name="add_homework">Add assignment</string>
    <string name="deadline_snackbar">Deadline field can not be empty!</string>
    <string name="date">Deadline</string>

    <!-- Notes Activity strings -->
    <string name="notes">Notes</string>
    <string name="title_dialog">Title:</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="title_error">Title field can not be empty!</string>
    <string name="title">Title</string>
    <string name="saved">Saved</string>

    <!-- Teachers Activity strings -->
    <string name="teachers">Teachers</string>
    <string name="add_teacher">Add teacher</string>
    <string name="edit_teacher">Edit teacher</string>
    <string name="name_dialog">Name:</string>
    <string name="post_dialog">Post:</string>
    <string name="phonenumber_dialog">Phone:</string>
    <string name="email_dialog">Email:</string>
    <string name="cabinnumber_dialog">Cabin No:</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="post">Post</string>
    <string name="email">Email</string>
    <string name="cabin_number">Cabin No</string>

    <!-- Exams Activity strings -->
    <string name="exams">Exams</string>
    <string name="add_exam">Add exam</string>
    <string name="date_dialog">Date:</string>
    <string name="time_dialog">Time:</string>

    <!-- Settings Activity strings -->
    <string name="sevendays_setting">Enable 7 Days of the Week</string>
    <string name="school_website_setting">Change College website</string>
    <string name="school_website_setting_summary">Change URL of your College website</string>

    <string name="reset_data">Reset App Data</string>
    <string name="reset_data_summary">Wipe all timetable, homeworks, notes, etc.</string>
    <string name="reset_warning">Are you sure you want to reset all data? This action cannot be undone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="subjects">Subjects</string>
    <string name="materials">Materials</string>
    <string name="add_material">Add Material</string>
    <string name="pick_file">Pick File</string>
    <string name="bullet_points">Bullet Points</string>
    <string name="heading">Heading</string>
    <string name="subheading">Subheading</string>
    <string name="divider">Divider</string>
    <string name="image">Image</string>
    <string name="color_picker_default_title">Choose Color</string>

    <!-- Notification -->
    <string name="notification_title">Today\'s lessons</string>
    <string name="do_not_have_lessons">You do not have lessons!</string>
    <string name="app_subtitle">Student Schedule Manager</string>
    <string name="pick_note_color">Pick Note Color</string>
    <string name="share">Share</string>
    <string name="delete_note_confirm">Are you sure you want to delete this note?</string>
    <string name="delete_note_title">Delete Note</string>

    <string name="personal_details_files">Personal Details &amp; Files</string>
    <string name="enable_personal_details">Enable Personal Details &amp; Files</string>
    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="roll_number_label">Roll Number</string>
    <string name="other_label">Other (e.g. Course)</string>
    <string name="my_files">My Files</string>
    <string name="upload_file">Upload File</string>

    <string name="widget_schedule_description">View your daily class schedule at a glance.</string>
    <string name="widget_deadlines_description">Keep track of upcoming assignments and exams.</string>
    <string name="widget_attendance_description">Quickly mark attendance for your current class.</string>
</resources>


