<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.NoteInfoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f0f0f0"
            android:padding="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_bold"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_edit_24"
                    android:contentDescription="@string/bullet_points" />

                <ImageButton
                    android:id="@+id/btn_bullet"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_list_24"
                    android:contentDescription="@string/bullet_points" />

                <ImageButton
                    android:id="@+id/btn_heading"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_book_24"
                    android:contentDescription="@string/heading" />

                <ImageButton
                    android:id="@+id/btn_subheading"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_subject_24"
                    android:contentDescription="@string/subheading" />

                <ImageButton
                    android:id="@+id/btn_divider"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_expand_more_24"
                    android:contentDescription="@string/divider" />

                <ImageButton
                    android:id="@+id/btn_color"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_note_24"
                    android:contentDescription="@string/pick_note_color" />

                <ImageButton
                    android:id="@+id/btn_share"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_menu_share"
                    android:contentDescription="@string/share" />

                <ImageButton
                    android:id="@+id/btn_delete"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_delete_forever_24"
                    android:contentDescription="@string/delete" />

                <ImageButton
                    android:id="@+id/btn_todo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_event_note_24"
                    android:contentDescription="TODO" />

                <ImageButton
                    android:id="@+id/btn_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_menu_gallery"
                    android:contentDescription="@string/image" />
            </LinearLayout>
        </HorizontalScrollView>

        <EditText
            android:id="@+id/edittextNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:padding="16dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@null"
            android:inputType="textCapSentences" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e0e0e0" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittextNote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="top"
            android:inputType="textMultiLine|textLongMessage"
            android:padding="16dp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>


